--- a/odoo12.conf
+++ b/odoo12.conf
@@ -1,6 +1,6 @@
 [options]
 ; This is the password that allows database operations:
-admin_passwd = admin369
+admin_passwd = ********
 db_host = False
 db_port = False
 db_user = odoo12
